<resources>
    <string name="app_name">rbusesycamiones</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Buses y Camiones</string>
    <string name="nav_header_subtitle">rbusesycamiones@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_nuevos">Nuevos</string>
    <string name="menu_usados">Usados</string>


    <string name="carros">Automoviles Camperos"\n" y Camionetas</string>
    <string name="login">Iniciar Sesión</string>
    <string name="record">Registrarse</string>

    <string name="client_name">Ingrese su nombre</string>
    <string name="client_sur_names">Ingrese apellidos</string>
    <string name="client_email">Ingrese email</string>
    <string name="client_phone">Ingrese celular</string>
    <string name="client_password">Ingrese pontraseña</string>
    <string name="btn_enviarRegister">Registrarme</string>


    <string name="prueba">rvokofkwpoodqew</string>


    <string name="title_activity_banner_adapter">BannerAdapter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.
    </string>
    <string name="todo">TODO</string>
    <string name="nuevos">Nuevos</string>
    <string name="usados">Usados</string>
</resources>