<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:id="@+id/scrollViewHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/carView_nuevos"
                    cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="8dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="8dp"
                    app:cardMaxElevation="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/nuevos"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/carView_usados"
                    cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="8dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="8dp"
                    app:cardMaxElevation="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/usados"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner_usados"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:padding="20dp" />
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_logIn"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="20dp"
                    android:layout_toStartOf="@+id/btn_register"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/login"
                    android:textAlignment="textStart"
                    android:textColor="@color/purple_700"
                    android:textSize="17sp"
                    android:textStyle="bold|italic" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@android:color/transparent"
                    android:text="@string/record"
                    android:textAlignment="textEnd"
                    android:textColor="@color/purple_700"
                    android:textSize="17sp"
                    android:textStyle="bold|italic" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>